--- a/DrunkCheckAPI/DrunkCheck/Web.config
+++ b/DrunkCheckAPI/DrunkCheck/Web.config
@@ -1,7 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-    <add key="owin:AutomaticAppStartup" value="false"/>
     <add key="ComPort" value="COM3" />
   </appSettings>
   <system.web>
@@ -15,10 +14,9 @@
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.0.0" newVersion="5.2.0.0" />
       </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
-      </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.webServer>
+    <modules runAllManagedModulesForAllRequests="true"></modules>
+  </system.webServer>
 </configuration>
