--- a/DrunkCheckClient/DrunkCheckClient/App.config
+++ b/DrunkCheckClient/DrunkCheckClient/App.config
@@ -3,4 +3,8 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+  <appSettings>
+    <add key="ServerURI" value="ws://localhost:50266/WebSocketHttpHandler.ashx" />
+    <add key="ComPort" value="COM3" />
+  </appSettings>
 </configuration>
