--- a/DrunkCheckClient/DrunkCheckClient/DrunkCheckClient.csproj
+++ b/DrunkCheckClient/DrunkCheckClient/DrunkCheckClient.csproj
@@ -33,6 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -44,6 +45,7 @@
     <Compile Include="ArduinoInterface.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceWebSocketInterface.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
