--- a/DrunkCheckClient/DrunkCheckClient/App.config
+++ b/DrunkCheckClient/DrunkCheckClient/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
   <appSettings>
-    <add key="ServerURI" value="ws://localhost:50266/WebSocketHttpHandler.ashx" />
+    <add key="ServerURI" value="wss://drunkchecker.azurewebsites.net/WebSocketHttpHandler.ashx" />
     <add key="ComPort" value="COM3" />
   </appSettings>
 </configuration>
