--- a/DrunkCheckAPI/DrunkCheck/DrunkCheck.csproj
+++ b/DrunkCheckAPI/DrunkCheck/DrunkCheck.csproj
@@ -88,8 +88,10 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="DrunkChecker.cs" />
     <Compile Include="DrunkCheckerContext.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="DrunkLevel.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
