--- a/ch-rom-ey-eggs-ten-shon/app/manifest.json
+++ b/ch-rom-ey-eggs-ten-shon/app/manifest.json
@@ -14,6 +14,7 @@
       "scripts/background.js"
     ]
   },
+  "permissions": ["storage", "tabs"],
   "browser_action": {
     "default_icon": {
       "19": "images/icon-19.png",
@@ -53,7 +54,12 @@
     {
       "matches": [
         "*://*.rbs.co.uk/*",
-        "*://*.rbsdigital.com/*"
+        "*://*.rbsdigital.com/*",
+        "*://*.hsbc.co.uk/*",
+        "*://*.halifax.co.uk/*",
+        "*://*.barclays.co.uk/*",
+        "*://*.santander.co.uk/*",
+        "*://*.natwest.com/*"
       ],
       "css": [
         "styles/main.css",
